// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Larivaar /> renders children when disabled 1`] = `
<div>
  <span
    class=" "
    data-background-color="#000"
    data-for="mahankosh-tooltip"
    data-place="right"
    data-tip="loading..."
  >
     Vahi 
  </span>
  <span
    class=" "
    data-background-color="#000"
    data-for="mahankosh-tooltip"
    data-place="right"
    data-tip="loading..."
  >
     Guru 
  </span>
</div>
`;

exports[`<Larivaar /> renders concatenated children when enabled 1`] = `
<div>
  <span
    class=""
  >
    <span
      class=""
      data-background-color="#000"
      data-place="right"
      data-tip="loading..."
    >
      <span>
        V
        <wbr />
      </span>
    </span>
    <span
      class=""
      data-background-color="#000"
      data-place="right"
      data-tip="loading..."
    >
      <span>
        a
        <wbr />
      </span>
    </span>
    <span
      class=""
      data-background-color="#000"
      data-place="right"
      data-tip="loading..."
    >
      <span>
        h
        <wbr />
      </span>
    </span>
  </span>
  <span
    class=""
  >
    <span
      class="larivaar-word"
      data-background-color="#000"
      data-place="right"
      data-tip="loading..."
    >
      <span>
        Gu
        <wbr />
      </span>
    </span>
    <span
      class="larivaar-word"
      data-background-color="#000"
      data-place="right"
      data-tip="loading..."
    >
      <span>
        ru
        <wbr />
      </span>
    </span>
  </span>
</div>
`;

exports[`<Larivaar /> renders odd words as orange when larivaarAssist is enabled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class=""
      >
        <span
          class=""
          data-background-color="#000"
          data-place="right"
          data-tip="loading..."
        >
          <span>
            V
            <wbr />
          </span>
        </span>
        <span
          class=""
          data-background-color="#000"
          data-place="right"
          data-tip="loading..."
        >
          <span>
            a
            <wbr />
          </span>
        </span>
        <span
          class=""
          data-background-color="#000"
          data-place="right"
          data-tip="loading..."
        >
          <span>
            h
            <wbr />
          </span>
        </span>
      </span>
      <span
        class=""
      >
        <span
          class="larivaar-word larivaar-assist-word"
          data-background-color="#000"
          data-place="right"
          data-tip="loading..."
        >
          <span>
            Gu
            <wbr />
          </span>
        </span>
        <span
          class="larivaar-word larivaar-assist-word"
          data-background-color="#000"
          data-place="right"
          data-tip="loading..."
        >
          <span>
            ru
            <wbr />
          </span>
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class=""
    >
      <span
        class=""
        data-background-color="#000"
        data-place="right"
        data-tip="loading..."
      >
        <span>
          V
          <wbr />
        </span>
      </span>
      <span
        class=""
        data-background-color="#000"
        data-place="right"
        data-tip="loading..."
      >
        <span>
          a
          <wbr />
        </span>
      </span>
      <span
        class=""
        data-background-color="#000"
        data-place="right"
        data-tip="loading..."
      >
        <span>
          h
          <wbr />
        </span>
      </span>
    </span>
    <span
      class=""
    >
      <span
        class="larivaar-word larivaar-assist-word"
        data-background-color="#000"
        data-place="right"
        data-tip="loading..."
      >
        <span>
          Gu
          <wbr />
        </span>
      </span>
      <span
        class="larivaar-word larivaar-assist-word"
        data-background-color="#000"
        data-place="right"
        data-tip="loading..."
      >
        <span>
          ru
          <wbr />
        </span>
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
